--- a/app.json
+++ b/app.json
@@ -1,8 +1,16 @@
 {
   "expo": {
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ],      
+      ["@react-native-google-signin/google-signin"]
+    ],
     "name": "EcommerceApp",
     "slug": "EcommerceApp",
-    "plugins": ["@react-native-google-signin/google-signin"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
