--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
+    "expo-camera": "~13.4.4",
     "expo-dev-client": "~2.4.12",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-elements": "^3.4.3",
+    "react-native-image-picker": "^7.1.0",
     "react-native-reanimated": "^2.17.0",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.2"
