--- a/app.json
+++ b/app.json
@@ -2,7 +2,24 @@
   "expo": {
     "name": "EcommerceApp",
     "slug": "EcommerceApp",
-    "plugins": ["@react-native-google-signin/google-signin"],
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ],
+      ["@react-native-google-signin/google-signin"],
+      [
+        "react-native-fbsdk-next",
+        {
+          "appID": "1588058182006527",
+          "clientToken": "763b724458f949d54c2410a1be4a6609",
+          "displayName": "EcommerceApp"
+        }
+      ],
+      ["@react-native-firebase/app", "@react-native-firebase/auth"]
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -19,6 +36,7 @@
       "supportsTablet": true
     },
     "android": {
+      "permissions": ["CAMERA_ROLL"],
       "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
