--- a/package.json
+++ b/package.json
@@ -13,20 +13,30 @@
     "@react-native-firebase/auth": "^18.7.1",
     "@react-native-google-signin/google-signin": "^10.1.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
+    "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.12",
+    "expo-firebase-recaptcha": "^2.3.1",
+    "expo-image-picker": "~14.3.2",
+    "expo-module-scripts": "^3.1.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^9.23.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-elements": "^3.4.3",
-    "react-native-reanimated": "^2.17.0",
+    "react-native-fbsdk-next": "^12.1.2",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-picker": "^5.3.1",
+    "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-vector-icons": "^10.0.2",
+    "react-native-webview": "^11.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
