--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^9.23.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-element-dropdown": "^2.10.1",
     "react-native-elements": "^3.4.3",
     "react-native-fbsdk-next": "^12.1.2",
     "react-native-gesture-handler": "~2.12.0",
